<resources>
    <string name="app_name">Account</string>
    <string name="action_settings">Settings</string>

    <string name="action_sync">Синхронизация</string>
    <string name="action_import">Импорт</string>
    <string name="action_info">Информация о телефоне</string>
    <string name="action_exit">Выход</string>
    <string name="action_change_password">Сменить пароль</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>