<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.account.activities.MainActivity">
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:title="@string/action_change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />


</menu>